# epyjson

./: LICENSE.txt  README.md  e-json-schema.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
conversion_from_ejson_0/: convert_from_ejson_0
epyjson/: __init__.py  e-json-schema.json  ejson.py  test_epyjson.py  utils.py
examples/: example.py  network.json
src/epyjson/: __init__.py  dumper.py  e-json-schema.json  ejson.py  utils.py
test_data/: netw_test_make_radial.json  netw_test_reduce.json  netw_test_reorder.json
tests/: test_epyjson.py
tests/test_data/: netw_generic_a.json  netw_test_collapse.json  netw_test_make_radial.json  netw_test_make_single_phased.json  netw_test_reduce.json  netw_test_reduce_merge_dups.json  netw_test_reduce_merge_shorts.json  netw_test_reduce_merge_strings.json  netw_test_reduce_remove_hanging.json  netw_test_remove_not_live.json  netw_test_remove_out_of_service.json  netw_test_remove_unconnected.json  netw_test_reorder.json
tests/test_networks/: netw_generic_a.json  netw_test_reduce_merge_dups.json  netw_test_reduce_merge_shorts.json  netw_test_reduce_merge_strings.json  netw_test_remove_unconnected.json
util/conversion_from_ejson_0/: README.md
utils/: convert_from_ejson_0  generate_schema_md.sh
